--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.ibm.watson.developer_cloud:java-sdk:3.3.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.code.gson:gson:2.7'
 }
