--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'com.google.code.gson:gson:2.7'
+
 }
