--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.example.johnteng.foodfinder"
         minSdkVersion 23
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        buildConfigField("String", "TWITTER_CONSUMER_KEY", TWITTER_CONSUMER_KEY)
+        buildConfigField("String", "TWITTER_CONSUMER_SECRET", TWITTER_CONSUMER_SECRET)
+        buildConfigField("String", "TWITTER_ACCESS_TOKEN", TWITTER_ACCESS_TOKEN)
+        buildConfigField("String", "TWITTER_ACCESS_TOKEN_SECRET", TWITTER_ACCESS_TOKEN_SECRET)
+        buildConfigField("String", "YELP_CLIENT_ID", YELP_CLIENT_ID)
+        buildConfigField("String", "YELP_CLIENT_SECRET", YELP_CLIENT_SECRET)
+        buildConfigField("String", "WATSON_USERNAME", WATSON_USERNAME)
+        buildConfigField("String", "WATSON_PASSWORD", WATSON_PASSWORD)
     }
     buildTypes {
         release {
@@ -21,14 +29,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.google.android.gms:play-services:9.6.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.ibm.watson.developer_cloud:java-sdk:3.3.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile files('libs/twitter4j-core-4.0.4.jar')
 }
